Fixed the problem with covering entire screen by the mask while popup dialog is shown

--- a/styles/common/popups.less
+++ b/styles/common/popups.less
@@ -2,7 +2,7 @@
 	display: none;
 	height: 100%;
 	left: 0px;
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	top: 0px;
 	width: 100%;
@@ -43,6 +43,9 @@
 	display: inline-block;
 	max-width: 50%;
 	min-width: 270px;
+	max-height: 100%;
+	overflow: auto;
+	box-sizing: border-box;
 	padding: 20px;
 	position: relative;
 	text-align: left;
